# retro

./: .gitignore  BUILD_INSTRUCTIONS.md  DESKTOP_APP.md  MACOS_BUILD_TROUBLESHOOTING.md  MANIFEST.in  QUICK_START_MACOS.md  README_GUI.md  USAGE.md  USAGE_SUMMARY.md  build_linux.sh  build_macos.sh  build_macos_fix.sh  build_windows.bat  package-lock.json  package.json  run_gui.py  setup.py
retro/: __init__.py  gui.py  web_gui.py
retro/templates/: index.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
