[package]
name = "retro-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "window-all", "http-all", "shell-open"] }
ureq = "2.9"

[build-dependencies]
tauri-build = { version = "1.5", features = ["config-json5"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
